--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-resizable-panels": "^2.0.21",
+    "react-responsive": "^10.0.0",
     "react-ts-tradingview-widgets": "^1.2.5",
     "react-use-websocket": "^4.8.1",
     "recharts": "^2.12.7",
