--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@alpacahq/alpaca-trade-api": "^3.1.2",
     "@clerk/nextjs": "^5.2.4",
     "@dnd-kit/core": "^6.1.0",
+    "@dxfeed/api": "^1.6.0",
     "@hookform/resolvers": "^3.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.4.8",
@@ -66,12 +67,14 @@
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.1",
     "input-otp": "^1.2.4",
+    "jquery": "^3.7.1",
     "lightweight-charts": "^4.2.2",
     "lucide-react": "^0.412.0",
     "next": "14.2.5",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-ajax": "^0.1.1",
     "react-apexcharts": "^1.4.1",
     "react-day-picker": "^9.0.0",
     "react-dom": "^18",
@@ -95,6 +98,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.32",
     "@types/node": "^20.17.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
