--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "ts-node --project tsconfig.server.json server.ts",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@alpacahq/alpaca-trade-api": "^3.1.2",
+    "@aws-sdk/client-s3": "^3.722.0",
+    "@aws-sdk/s3-request-presigner": "^3.722.0",
     "@clerk/nextjs": "^5.2.4",
     "@dnd-kit/core": "^6.1.0",
     "@dxfeed/api": "^1.6.0",
@@ -53,8 +55,11 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-stately/data": "^3.12.0",
-    "@tanstack/react-table": "^8.20.5",
+    "@talkjs/react": "^0.1.11",
+    "@tanstack/react-table": "^8.20.6",
     "@uiball/loaders": "^1.3.1",
+    "ai": "^4.0.26",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -63,6 +68,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.7",
     "express": "^4.21.0",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.5.6",
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.1",
@@ -82,6 +88,7 @@
     "react-icons": "^5.2.1",
     "react-resizable-panels": "^2.0.21",
     "react-responsive": "^10.0.0",
+    "react-table": "^7.8.0",
     "react-ts-tradingview-widgets": "^1.2.5",
     "react-use-websocket": "^4.8.1",
     "recharts": "^2.12.7",
@@ -92,16 +99,21 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "talkjs": "^0.33.0",
     "vaul": "^0.9.1",
     "ws": "^8.18.0",
+    "xml2js": "^0.6.2",
     "yahoo-finance2": "^2.13.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/jquery": "^3.5.32",
     "@types/node": "^20.17.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-table": "^7.7.20",
+    "@types/xml2js": "^0.4.14",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
