--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "site_builder",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "ts-node --project tsconfig.server.json server.ts",
-    "build": "prisma generate && next build",
-    "start": "next start",
-    "lint": "next lint",
-    "prisma:push": "prisma db push",
-    "prisma:studio": "prisma studio",
-    "prisma:seed": "prisma db seed",
-    "postinstall": "prisma generate"
-  },
+    "scripts": {
+      "dev": "next dev",
+      "build": "prisma generate && next build",
+      "start": "next start",
+      "lint": "next lint",
+      "prisma:push": "prisma db push",
+      "prisma:studio": "prisma studio",
+      "prisma:seed": "prisma db seed",
+      "postinstall": "prisma generate"
+    },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
