--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "site_builder",
   "version": "0.1.0",
   "private": true,
-    "scripts": {
-      "dev": "next dev",
-      "build": "prisma generate && next build",
-      "start": "next start",
-      "lint": "next lint",
-      "prisma:push": "prisma db push",
-      "prisma:studio": "prisma studio",
-      "prisma:seed": "prisma db seed",
-      "postinstall": "prisma generate"
-    },
+  "scripts": {
+    "dev": "next dev",
+    "build": "prisma generate && next build",
+    "start": "next start",
+    "lint": "next lint",
+    "prisma:push": "prisma db push",
+    "prisma:studio": "prisma studio",
+    "prisma:seed": "prisma db seed",
+    "postinstall": "prisma generate"
+  },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
@@ -100,6 +100,7 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "talkjs": "^0.33.0",
+    "validator": "^13.12.0",
     "vaul": "^0.9.1",
     "ws": "^8.18.0",
     "xml2js": "^0.6.2",
