--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-context-menu": "^2.2.1",
-    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -54,8 +54,10 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@radix-ui/react-visually-hidden": "^1.1.1",
     "@react-stately/data": "^3.12.0",
     "@talkjs/react": "^0.1.11",
+    "@tanstack/react-query": "^5.63.0",
     "@tanstack/react-table": "^8.20.6",
     "@uiball/loaders": "^1.3.1",
     "ai": "^4.0.26",
@@ -72,6 +74,7 @@
     "framer-motion": "^11.5.6",
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.1",
+    "http": "^0.0.1-security",
     "input-otp": "^1.2.4",
     "jquery": "^3.7.1",
     "lightweight-charts": "^4.2.2",
@@ -94,7 +97,7 @@
     "recharts": "^2.12.7",
     "request": "^2.88.2",
     "sharp": "^0.33.5",
-    "socket.io": "^4.7.5",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
@@ -114,6 +117,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-table": "^7.7.20",
+    "@types/ws": "^8.5.13",
     "@types/xml2js": "^0.4.14",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
