--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "ai": "^4.0.26",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -85,6 +86,7 @@
     "react": "^18",
     "react-ajax": "^0.1.1",
     "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^9.0.0",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
@@ -94,7 +96,7 @@
     "react-table": "^7.8.0",
     "react-ts-tradingview-widgets": "^1.2.5",
     "react-use-websocket": "^4.8.1",
-    "recharts": "^2.12.7",
+    "recharts": "^2.15.0",
     "request": "^2.88.2",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
