--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@dxfeed/api": "^1.6.0",
     "@hookform/resolvers": "^3.9.0",
+    "@neondatabase/serverless": "^1.0.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.4.8",
     "@prisma/client": "^5.22.0",
@@ -37,7 +38,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-hover-card": "^1.1.4",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.4",
     "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-popover": "^1.1.4",
@@ -45,9 +46,9 @@
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.2.2",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
@@ -80,6 +81,7 @@
     "jquery": "^3.7.1",
     "lightweight-charts": "^4.2.2",
     "lucide-react": "^0.412.0",
+    "motion": "^12.18.1",
     "next": "14.2.5",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
@@ -107,6 +109,7 @@
     "talkjs": "^0.33.0",
     "validator": "^13.12.0",
     "vaul": "^0.9.1",
+    "vercel": "^43.2.0",
     "ws": "^8.18.0",
     "xml2js": "^0.6.2",
     "yahoo-finance2": "^2.13.2",
